force-app/main/default/objects/Interview__c/Interview__c.object-meta.xml
<CustomObject>
    <label>Interview</label>
    <nameField>
        <label>Nom de Interview</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>