force-app/main/default/objects/Interview__c/fields/InterviewEndDate__c.field-meta.xml
<CustomField>
    <fullName>InterviewEndDate__c</fullName>
    <label>InterviewEndDate</label>
    <type>DateTime</type>
</CustomField>