force-app/main/default/objects/Interview__c/fields/InterviewEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>InterviewEndDateTime__c</fullName>
    <formula>InterviewStartDateTime__c + (Duration__c/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InterviewEndDateTime</label>
    <type>DateTime</type>
</CustomField>