force-app/main/default/objects/Interview__c/fields/InterviewStartDate__c.field-meta.xml
<CustomField>
    <fullName>InterviewStartDate__c</fullName>
    <label>InterviewStartDate</label>
    <type>DateTime</type>
</CustomField>