force-app/main/default/objects/Interview__c/fields/InterviewStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>InterviewStartDateTime__c</fullName>
    <label>InterviewStartDateTime</label>
    <type>DateTime</type>
</CustomField>