force-app/main/default/objects/Interview__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>&apos;Interview With&apos;+ Candidate__r.First_Name__c +&apos; &apos;+  Candidate__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>