force-app/main/default/objects/Interview__c/fields/Recommend_to_Hire__c.field-meta.xml
<CustomField>
    <fullName>Recommend_to_Hire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend to Hire</label>
    <type>Checkbox</type>
</CustomField>