force-app/main/default/objects/Interview__c/recordTypes/Custom_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Custom_Record_Type</fullName>
    <active>true</active>
    <label>Custom Record Type</label>
</RecordType>